force-app/main/default/objects/Drive_File__c/Drive_File__c.object-meta.xml
<CustomObject>
    <label>Drive File</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Drive File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drive Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>