force-app/main/default/objects/Drive_File__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Drive Files</relationshipLabel>
    <relationshipName>Drive_Files</relationshipName>
    <type>Lookup</type>
</CustomField>