force-app/main/default/objects/Drive_File__c/fields/Diary__c.field-meta.xml
<CustomField>
    <fullName>Diary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diary</label>
    <referenceTo>Diary__c</referenceTo>
    <relationshipLabel>Drive Files</relationshipLabel>
    <relationshipName>Drive_Files</relationshipName>
    <type>Lookup</type>
</CustomField>