force-app/main/default/objects/Drive_File__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>HYPERLINK( File_URL__c ,  File_Name__c ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>