force-app/main/default/objects/Drive_File__c/fields/WA_Message__c.field-meta.xml
<CustomField>
    <fullName>WA_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WA Message</label>
    <referenceTo>WA_Message__c</referenceTo>
    <relationshipLabel>Drive Files</relationshipLabel>
    <relationshipName>Drive_Files</relationshipName>
    <type>Lookup</type>
</CustomField>